--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "body-parser": "^1.18.2",
     "crypto": "^1.0.1",
     "express": "^4.16.2",
+    "fs": "0.0.1-security",
+    "image-size": "^0.6.1",
     "keygenerator": "^1.0.4",
-    "mongoose": "^4.13.6"
+    "mongoose": "^4.13.6",
+    "multer": "^1.3.0"
   }
 }
