--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
     "crypto": "^1.0.1",
     "express": "^4.16.2",
@@ -17,6 +18,7 @@
     "image-size": "^0.6.1",
     "keygenerator": "^1.0.4",
     "mongoose": "^4.13.6",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "utf8": "^3.0.0"
   }
 }
