--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "lodr-codr1",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +11,7 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
+    "consolidate": "^0.15.0",
     "crypto": "^1.0.1",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
@@ -20,5 +20,14 @@
     "mongoose": "^4.13.6",
     "multer": "^1.3.0",
     "utf8": "^3.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tatulsafaryan/lodr-kodr.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tatulsafaryan/lodr-kodr/issues"
+  },
+  "homepage": "https://github.com/tatulsafaryan/lodr-kodr#readme",
+  "description": ""
 }
