--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "consolidate": "^0.15.0",
     "crypto": "^1.0.1",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "image-size": "^0.6.1",
